# Game_of_life

./: CMakeLists.txt  Cell_automat.cpp  Cell_automat.h  main.cpp
Game_of_life/: CMakeLists.txt  main.cpp
Game_of_life/gtest/: CmakeLists.txt  cell_automat.cpp
Game_of_life/main/: CMakeLists.txt  Cell_automat.cpp  Cell_automat.h
Game_of_life_qt/: Game_of_life_qt.pro  back_image.qrc  cell_automat.cpp  cell_automat.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
